--- a/index.html
+++ b/index.html
@@ -147,8 +147,10 @@
       <h1>Mi dispiace davvero ❤️</h1>
 
       <p>
-        Amore, volevo dirti che mi dispiace. Ho sbagliato e capisco come ti sei sentita.
-        Non cerco scuse: voglio rimediare e dimostrarti con i fatti che ci tengo a te.
+        Topina, mi dispiace. Ho sbagliato e capisco come ti sei sentita.
+        Non cerco scuse: voglio rimediare e dimostrarti con i fatti che ci tengo a te. 
+        Questo è solo un piccolo gesto per chiederti scusa e provare a strapparti un sorriso. 
+        Ti consiglio di premere il pulsante rosso qui sotto, magari dopo esserti goduta un po di musica.❤️
       </p>
 
       <p>
